:bug: remove all flex in code blocks to fix text select & whitespaces

--- a/src/styles/components/prism.css
+++ b/src/styles/components/prism.css
@@ -25,10 +25,6 @@ pre[class*="language-"] {
   &.collapse-space {
     white-space: normal;
   }
-
-  &::selection, ::selection {
-    @apply bg-primary-dark;
-  }
 }
 
 /* Code blocks */
